src/test/c/accept/02-stadium.ms
stadium Lusail Stadium {
    Capacity: 88966;
    Photo: http://stadiumdb.com/pictures/stadiums/qat/lusail_stadium/lusail_stadium13m.jpg;
}