src/test/c/reject/02-malformed-expression.ms
stadium Lusail Stadium {
    Capacity: 88966;
    Photo: http://foto.google.com/FotoDelLusailEnHd.jpg;